# release-sentinel

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: policies.yaml  release_plan.yaml
docs/: ARCHITECTURE.md  OPERATIONS.md
src/release_sentinel/: __init__.py  cli.py  config.py  evaluator.py  signals.py
src/release_sentinel/integrations/: azure_boards.py  slo_provider.py
tests/: test_config.py  test_evaluator.py  test_signals.py
